add Weather Obj Diag and update W&T description

--- a/DD/latex/commandsFile.tex
+++ b/DD/latex/commandsFile.tex
@@ -37,6 +37,8 @@
 \newcommand{\goal}[1]{\bigskip
 	\noindent\textbf{\myref{#1}}}
 
+\newcommand{\inlinecode}[1]{\lstinline[basicstyle=\ttfamily]{#1}}
+
 % set margin of enumerate sections
 \setlist[enumerate,1]{leftmargin=1.2cm}
 
