Add selectTravelPlanSolution Sequence Diagram

--- a/DD/latex/sections/architecturalDesign.tex
+++ b/DD/latex/sections/architecturalDesign.tex
@@ -122,7 +122,11 @@
 			\centerline{\includegraphics[width=0.9\paperwidth]{Images/SD_InvitationCreation}}
 			\caption{Sequence Diagram - Invitation Creation}
 		\end{figure}
-		
+	\subsubsection{Sequence Diagram - Select TravelPlan Solution}
+		\begin{figure}[H]
+			\centerline{\includegraphics[width=0.9\paperwidth]{Images/selectTravelSolution}}
+			\caption{Sequence Diagram - Select TravelPlan Solutions}
+		\end{figure}
 	\subsubsection{Sequence Diagram - Locate Nearest Vehicle}
 		\begin{figure}[H]
 			\centerline{\includegraphics[width=0.9\paperwidth]{Images/LocateNearest}}
