Add Solution Calculator Algorithm

--- a/DD/latex/sections/architecturalDesign.tex
+++ b/DD/latex/sections/architecturalDesign.tex
@@ -123,6 +123,7 @@
 			\caption{Sequence Diagram - Invitation Creation}
 		\end{figure}
 	\subsubsection{Sequence Diagram - Select TravelPlan Solution}
+		\label{sect:Select TravelPlan Solution}
 		\begin{figure}[H]
 			\centerline{\includegraphics[width=0.9\paperwidth]{Images/selectTravelSolution}}
 			\caption{Sequence Diagram - Select TravelPlan Solutions}
