--- a/DD/latex/sections/userInterfaceDesign.tex
+++ b/DD/latex/sections/userInterfaceDesign.tex
@@ -1,5 +1,5 @@
 \subsection{UX Diagrams}
-We chose not to expand the methods preceded by **, considering them unattractive and not to weigh the diagram unnecessarily.
+In this diagram we represent how the app and the web App should interact with the User. We chose to expand only the main Screens and to leave some methods unexplored, to avoid overcomplicating the diagram unnecessarily. The methods not explored are preceded by \textbf{**}.
 
 	\begin{figure}[H]	
 		\centerline{\includegraphics[width=0.9\paperwidth]{Images/UxPerson}}
