add abbreviation and fix errors

--- a/DD/latex/sections/algorithmDesign.tex
+++ b/DD/latex/sections/algorithmDesign.tex
@@ -60,7 +60,7 @@
 	
 		\item calculates the fastest TravelPlan: the one for which the sum of all estimated Ride times of each Ride is the lowest if compared with the other TravelPlan in travelPlanSolutions and sets a tag = "fastest"; 
 		
-		\item calculates the most ecological TravelPlan: the one for wich  the sum of all EcoScores of each Ride is  the highest if compared with the other TravelPlan in travelPlanSolutions and sets a tag = "Eco-Friendlest" (for this operation a function calculateEcoScore (TravelPlan) , detailed below, is used);
+		\item calculates the most ecological TravelPlan: the one for which  the sum of all EcoScores of each Ride is  the highest if compared with the other TravelPlan in travelPlanSolutions and sets a tag = "Eco-Friendlest" (for this operation a function calculateEcoScore (TravelPlan) , detailed below, is used);
 	
 		\item for each TravelPlan where there is a Ride with a TravelMean is not recommended in case of adverse weather conditions (eg rain, snow, ..), if weather forecasts are bad, set a tag = "warning: Weather";\newline
 	
