--- a/DD/latex/sections/introduction.tex
+++ b/DD/latex/sections/introduction.tex
@@ -15,6 +15,10 @@
 		\item[Dynamic Configuration] with this term we mean a reconfiguration that can be done without powering off the server or any physical component.
 	\end{description}
 	\subsubsection{Acronyms}
+			\begin{description}
+		\item[- \textit{S2B}:] System to Be;
+		\item[- \textit{API}:] Application Programming Interface.
+	\end{description}
 	\subsubsection{Abbreviations}
 	
 \subsection{Revision history}
