update RASD in latex: software interface

--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -21,9 +21,7 @@
 	and internal storage access.
 	
 	\subsubsection{Software Interfaces}
-	The mobile application must support Android, iOS and the remaining main OSs (further details are discussed in paragraph 3.6.5 Portability). The web application
-	works on any web server that supports Java. The back-end stores its data in a
-	DBMS and can run on every platform that supports the JVM.
+	The mobile application must support Android, iOS and the remaining main OSs (further details are discussed in paragraph 3.6.5 Portability).
 	\subsubsection{Communication Interfaces}
 	The communication between clients and server should be HTTP requests/responses based.
 \subsection{UML modeling}
