add analysis in I&T plan section

--- a/DD/latex/commandsFile.tex
+++ b/DD/latex/commandsFile.tex
@@ -5,12 +5,13 @@
 \usepackage[pdftex, colorlinks]{hyperref} % to use href
 \usepackage[T1]{fontenc} % to correctly show symbols like "|", ">", "<"
 \usepackage{lmodern} % needed when using T1 fontencoding
-\usepackage[dvipsnames]{xcolor}
+\usepackage[dvipsnames, table]{xcolor}
 \usepackage{listings}
 \usepackage{enumitem}
 \usepackage{float}
 \usepackage{enumitem}
 \usepackage{pdflscape}
+
 
 \colorlet{mylinkcolor}{Orange}
 \colorlet{mycitecolor}{Orange}
