--- a/DD/latex/sections/i&tPlan.tex
+++ b/DD/latex/sections/i&tPlan.tex
@@ -1,1 +1,35 @@
-% TODO
+With the goal of identifying a proper developing plan, for each feature we have analyzed:
+\begin{itemize}
+	\item the importance for Users: how much the feature is perceived as fundamental, from the User point of view. Core features have been labeled with a high or medium-high importance. They have to be implemented completely in the first release. Features with importance low or medium-low are the ones that could be implemented in a successive releases and that add value to Travlendar+ but are not part of the core functionalities.
+	\item difficulty of implementation of the Back End: it defines an estimate of the effort that will be spent in the implementation of the communication issues, the logic and the data models on the server required by the feature.
+	\item difficulty of implementation of the Front End: this indicates an estimate of the effort required to implement in the App \textit{(Mobile App or Web App)} the graphic and the user interactions
+\end{itemize}
+
+\noindent
+The following table summarizes the result of our analysis.
+
+\begin{center}
+	\renewcommand{\arraystretch}{1.5}
+	\rowcolors{1}{gray!20}{white}
+	\begin{tabular}{|p{0.4\textwidth} l l l|}
+		\hline
+		\rowcolor{gray!45}
+		\textbf{Feature} & \textbf{Importance for User} & \textbf{Back End} & \textbf{Front End}\\
+
+		sign up 					& medium-low 	& low 			& low \\
+		appointment creation and management	& high 	& medium-low	& medium-low \\
+		schedule visualization		& high 			& low			& medium-high \\
+		settings 					& medium-low 	& low			& medium-low \\
+		solutions calculation 		& high 			& medium-high	& medium-high \\
+		notification system 		& medium-high 	& medium-high	& low \\
+		weather \& traffic updates 	& medium-high 	& high			& low \\
+		tickets purchase and management	& low 		& medium-high	& medium-high \\
+		localization sharing vehicle& medium-low 	& medium-low	& medium-low \\
+		rent a sharing vehicle		& low 			& low			& low \\
+		invitations					& medium-low	& medium-high	& medium-low \\
+		Incoming Appointments		& medium-high	& medium-low	& low \\
+		\hline
+	\end{tabular}
+\end{center}
+
+% TODO pietro, add here your part
